fix: hide overflow x scrollbar

--- a/frontend/src/metabase/css/core/overflow.css
+++ b/frontend/src/metabase/css/core/overflow.css
@@ -26,6 +26,10 @@
   overflow-x: scroll;
 }
 
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
 .bounded-overflow-x-scroll {
   width: 100%;
   overflow-x: scroll;
